Finalizando o Design da tela login

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">registro</string>
+    <string name="login_email">Digite seu e-mail</string>
+    <string name="login_senha">Digite sua senha</string>
 </resources>
