--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">registro</string>
     <string name="login_email">Digite seu e-mail</string>
     <string name="login_senha">Digite sua senha</string>
+    <string name="action_settings">Configurações</string>
+    <string name="action_sair">Sair</string>
 </resources>
