--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">registro</string>
+    <string name="app_name">Registro</string>
     <string name="login_email">Digite seu e-mail</string>
     <string name="login_senha">Digite sua senha</string>
     <string name="action_settings">Configurações</string>
