--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="action_sair">Sair</string>
     <string name="textoConfirma">As informações abaixo estão corretas?</string>
     <string name="texto_imagem">Está foto será inserida no documento</string>
+    <string name="textobotaoenviar">Enviar Cadastro</string>
 </resources>
