--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,9 @@
     <string name="direito_registro"> Registro @ 2019-2020 </string>
     <string name="app_version">Versão: 2.7.2</string>
 
+    <string name="facebook_app_id">935889986852459</string>
+    <string name="fb_login_protocol_scheme">fb935889986852459</string>
+
     <string name="app_name">Registro</string>
     <string name="login_email">Digite seu e-mail</string>
     <string name="login_senha">Digite sua senha</string>
